--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "codium.codeCompletion.enable": true,
-    "php.stubs": [
-        "mongodb",
-        "*"
-    ]
+    "codium.codeCompletion.enable": true
 }
